lots of things close to done

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,10 +2,10 @@ CC= /usr/bin/gcc
 all:	Sender Reciever
 
 Sender: Sender.c;
-	${CC} Sender.c -o Sender.o
+	${CC} Sender.c -o Sender.o -lm
 
 Reciever: Reciever.c;
-	${CC} Reciever.c -o Reciever.o
+	${CC} Reciever.c -o Reciever.o -lm
 
 clean:
 	rm Sender.o Reciever.o
